--- a/app/src/main/res/layout/dialog_transfer.xml
+++ b/app/src/main/res/layout/dialog_transfer.xml
@@ -91,28 +91,28 @@
 
 
             <TextView
-                android:id="@+id/transferDiag_tvAmmount"
+                android:id="@+id/transferDiag_tvAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20sp"
                 android:layout_marginTop="5sp"
-                android:text="Ammount (RON)"
-                app:layout_constraintBottom_toTopOf="@id/transferDiag_tilAmmount"
+                android:text="Amount (RON)"
+                app:layout_constraintBottom_toTopOf="@id/transferDiag_tilAmount"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/transferDiag_tilRecIban" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/transferDiag_tilAmmount"
+                android:id="@+id/transferDiag_tilAmount"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
                 android:layout_marginStart="20sp"
                 android:layout_marginEnd="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/transferDiag_tvAmmount">
+                app:layout_constraintTop_toBottomOf="@+id/transferDiag_tvAmount">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/transferDiag_tietAmmount"
+                    android:id="@+id/transferDiag_tietAmount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/primary_color"
@@ -129,7 +129,7 @@
                 android:layout_marginTop="5sp"
                 android:text="Description"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/transferDiag_tilAmmount" />
+                app:layout_constraintTop_toBottomOf="@id/transferDiag_tilAmount" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/transferDiag_tilDesciption"
