--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -142,7 +142,7 @@
         android:background="@drawable/background_spinner"
         android:hint = "Click to set date"
         android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/registerFrag_tilAdress"
+        app:layout_constraintBottom_toTopOf="@+id/registerFrag_tilAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/registerFrag_tilPhone"
         app:layout_constraintTop_toBottomOf="@+id/registerFrag_tilIdentificationNumber" />
@@ -184,16 +184,16 @@
 
 
     <TextView
-        android:id="@+id/registerFrag_tvAdress"
+        android:id="@+id/registerFrag_tvAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20sp"
-        android:text="Home Adress"
-        app:layout_constraintBottom_toTopOf="@id/registerFrag_tilAdress"
+        android:text="Home Address"
+        app:layout_constraintBottom_toTopOf="@id/registerFrag_tilAddress"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/registerFrag_tilAdress"
+        android:id="@+id/registerFrag_tilAddress"
         android:layout_width="match_parent"
         android:layout_height="50sp"
         android:layout_marginStart="20sp"
@@ -204,7 +204,7 @@
         app:layout_constraintTop_toBottomOf="@+id/registerFrag_tilPhone">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/registerFrag_tietAdress"
+            android:id="@+id/registerFrag_tietAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/primary_color"
@@ -222,7 +222,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20sp"
-        android:text="Email Adress"
+        android:text="Email Address"
         app:layout_constraintBottom_toTopOf="@id/registerFrag_tilEmail"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -235,7 +235,7 @@
         android:layout_marginEnd="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registerFrag_tilAdress">
+        app:layout_constraintTop_toBottomOf="@+id/registerFrag_tilAddress">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/registerFrag_tietEmail"
