--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,28 +15,28 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:text="John Terry"
+        android:layout_marginEnd="5sp"
+        android:layout_marginBottom="40sp"
         android:textColor="@color/white"
         android:textSize="25sp"
+        android:singleLine="true"
         android:textStyle="bold"
-        android:layout_marginTop="80dp"
-        android:layout_marginStart="200sp"
         app:layout_constraintEnd_toStartOf="@+id/homeFrag_ivUser"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/homeFrag_clCards"/>
 
     <ImageView
         android:id="@+id/homeFrag_ivUser"
         android:layout_width="50sp"
         android:layout_height="55dp"
         android:layout_marginStart="5sp"
-        android:layout_marginTop="70dp"
         android:layout_marginEnd="25sp"
+        android:layout_marginBottom="40sp"
         android:src="@drawable/ic_profile_picture_round"
         app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/homeFrag_tvName"
-       />
+        app:layout_constraintBottom_toTopOf="@id/homeFrag_clCards"/>
 
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text="Your balance"
         android:layout_marginStart="30sp"
-        android:layout_marginBottom="60sp"
+        android:layout_marginBottom="55sp"
         android:textColor="@color/grey"
         app:layout_constraintTop_toBottomOf="@id/homeFrag_tvBalance"
         app:layout_constraintStart_toStartOf="parent"
