--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -12,15 +12,15 @@
         android:id="@+id/transactionsFrag_tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200sp"
-        android:layout_marginTop="80dp"
         android:fontFamily="sans-serif"
         android:text="John Terry"
+        android:layout_marginEnd="5sp"
         android:textColor="@color/white"
         android:textSize="25sp"
+        android:singleLine="true"
         android:textStyle="bold"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toStartOf="@+id/transactionsFrag_ivUser"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -28,13 +28,12 @@
         android:layout_width="50sp"
         android:layout_height="55dp"
         android:layout_marginStart="5sp"
-        android:layout_marginTop="70dp"
         android:layout_marginEnd="25sp"
+        android:layout_marginTop="70dp"
         android:src="@drawable/ic_profile_picture_round"
+        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/transactionsFrag_tvName"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
