--- a/app/src/main/res/layout/lv_transfers_row_item.xml
+++ b/app/src/main/res/layout/lv_transfers_row_item.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:text="Processed"
         android:textSize="13sp"
-        android:textColor="#228B22"
+        android:textColor="@color/dark_green"
         android:layout_marginStart="10sp"
         app:layout_constraintStart_toEndOf="@id/lvTransfers_ivTransfer"
         app:layout_constraintTop_toBottomOf="@id/lvTransfers_tvTransfer">
@@ -46,10 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5sp"
         android:layout_marginEnd="25sp"
-        android:text="- 500 RON"
+        android:text="+ 500 RON"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:textColor="#FF0000"
+        android:textColor="@color/dark_green"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/lvTransfers_tvDate">
