--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,16 @@
     <style name="RoundDialogSyle" parent="Theme.AppCompat.DayNight.Dialog.Alert">
         <item name="android:windowBackground">@drawable/roundbackground_dialog</item>
     </style>
+
+    <style name="WhiteOptionsMenuTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+    </style>
+
+    <style name="BlackOptionsMenuTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:actionMenuTextColor">@color/black</item>
+    </style>
+
+
 </resources>
