--- a/app/src/main/res/layout/dialog_request.xml
+++ b/app/src/main/res/layout/dialog_request.xml
@@ -39,15 +39,44 @@
         android:textSize="15sp"
         android:layout_marginStart="20sp" />
 
+
+    <TextView
+        android:id="@+id/requestDiag_tvDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Description"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="15sp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/requestDiag_tilDescription"
+        android:layout_width="match_parent"
+        android:layout_height="50sp"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="5sp"
+        android:layout_marginEnd="20sp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/requestMoneyFrag_tietDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/primary_color"
+            android:inputType="numberDecimal"
+            android:paddingBottom="10sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
     <TextView
         android:id="@+id/requestDiag_tvAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="15sp"
         android:text="Amount"
         android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginStart="20sp"
-        android:layout_marginTop="20sp" />
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/requestDiag_tilAmount"
