--- a/app/src/main/res/layout/fragment_request_money.xml
+++ b/app/src/main/res/layout/fragment_request_money.xml
@@ -105,7 +105,7 @@
             android:id="@+id/requestMoneyFrag_llSender"
             android:layout_width="match_parent"
             android:layout_height="70sp"
-            android:background="@drawable/roundbackground_listview"
+            android:background="@color/grey"
             android:layout_marginTop="30sp"
             app:layout_constraintTop_toBottomOf="@id/requestMoneyFrag_btSearch"
             app:layout_constraintStart_toStartOf="parent"
@@ -156,6 +156,22 @@
                 android:padding="8dp"/>
         </LinearLayout>
 
+        <ListView
+            android:id="@+id/requestMoneyFrag_lvRequests"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            app:layout_constraintTop_toBottomOf="@id/requestMoneyFrag_llSender"
+            android:layout_marginTop="35sp"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"
+            android:overScrollMode="never"
+            android:divider="@color/white"
+            android:dividerHeight="7sp"
+            android:scrollbars="none"
+            android:clickable="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
 
