--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="btGrey">#F0F0F0</color>
     <color name="light_grey">#7f7f7f</color>
     <color name="dark_green">#228B22</color>
+    <color name="red">#FF0000</color>
 </resources>
