--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -172,10 +172,10 @@
         </Button>
 
         <Button
-            android:id="@+id/homeFrag_btViewTransactions"
+            android:id="@+id/homeFrag_btDeposits"
             android:layout_width="match_parent"
             android:layout_height="55sp"
-            android:text="View Transactions"
+            android:text="Bank Deposits"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -183,7 +183,7 @@
             android:layout_marginTop="10sp"
             android:layout_marginStart="20sp"
             android:backgroundTint="@color/btGrey"
-            android:drawableLeft="@drawable/ic_transactions"
+            android:drawableLeft="@drawable/ic_deposit"
             android:layout_marginEnd="120sp">
         </Button>
 
@@ -195,7 +195,7 @@
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/homeFrag_btViewTransactions"
+            app:layout_constraintTop_toBottomOf="@id/homeFrag_btDeposits"
             android:layout_marginTop="10sp"
             android:layout_marginStart="20sp"
             android:backgroundTint="@color/btGrey"
