--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -172,6 +172,7 @@
             android:layout_marginTop="30sp"
             android:layout_marginStart="15sp"
             android:layout_marginEnd="15sp"
+            android:layout_marginBottom="50sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/transferFrag_rlTransfer"
