--- a/app/src/main/res/layout/dialog_add_deposit.xml
+++ b/app/src/main/res/layout/dialog_add_deposit.xml
@@ -143,7 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/addDepositDialog_tvMaturityRate"
-                android:text="@string/maturity_end_date"
+                android:text="@string/maturity_date"
                 android:textStyle="bold"
                 android:textSize="17sp"
                 android:gravity="center"
