--- a/app/src/main/res/drawable/ic_mobile_transfer.xml
+++ b/app/src/main/res/drawable/ic_mobile_transfer.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="700dp"
-    android:height="700dp"
+    android:width="45sp"
+    android:height="45sp"
     android:viewportWidth="700"
     android:viewportHeight="700">
   <path
