--- a/app/src/main/res/drawable/ic_pay.xml
+++ b/app/src/main/res/drawable/ic_pay.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="650dp"
-    android:height="650dp"
+    android:width="45sp"
+    android:height="45sp"
     android:viewportWidth="650"
     android:viewportHeight="650">
   <path
