--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -47,123 +47,83 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-            android:id="@+id/transferFrag_rlPay"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/transferFrag_llButtons"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60sp"
-            android:layout_marginTop="50sp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:layout_marginTop="30sp"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageButton
-                android:id="@+id/transferFrag_ibPay"
-                android:layout_width="85sp"
-                android:layout_height="85sp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_pay"
-                android:clickable="true" />
-
-            <TextView
-                android:id="@+id/transferFrag_tvPay"
-                android:layout_width="110sp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/transferFrag_ibPay"
-                android:layout_centerHorizontal="true"
-                android:text="Pay"
-                android:textAlignment="center"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
+                android:gravity="center_vertical">
 
-        <RelativeLayout
-            android:id="@+id/transferFrag_rlRequest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50sp"
-            android:layout_marginEnd="60sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/transferFrag_btPay"
+                    android:layout_width="0dp"
+                    android:layout_height="100sp"
+                    android:layout_weight="1"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="5sp"
+                    android:backgroundTint="@color/btGrey"
+                    android:drawableLeft="@drawable/ic_pay"
+                    android:text="Pay"
+                    android:textColor="@color/black"
+                    app:cornerRadius="20sp" />
 
-            <ImageButton
-                android:id="@+id/transferFrag_ibRequest"
-                android:layout_width="85sp"
-                android:layout_height="85sp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_request"
-                android:clickable="true" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/transferFrag_btRequest"
+                    android:layout_width="0dp"
+                    android:layout_height="100sp"
+                    android:layout_weight="1"
+                    android:layout_marginStart="5sp"
+                    android:layout_marginEnd="20sp"
+                    android:backgroundTint="@color/btGrey"
+                    android:drawableLeft="@drawable/ic_request"
+                    android:text="Request Money"
+                    android:textColor="@color/black"
+                    app:cornerRadius="20sp" />
 
-            <TextView
-                android:id="@+id/transferFrag_tvRequest"
-                android:layout_width="110sp"
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/transferFrag_ibRequest"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"
-                android:text="Request Money"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
+                android:gravity="center_vertical"
+                android:layout_marginTop="2dp">
 
-        <RelativeLayout
-            android:id="@+id/transferFrag_rlTransfer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:layout_marginTop="5sp"
-            android:layout_marginStart="60sp"
-           app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/transferFrag_rlPay">
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/transferFrag_btTransfer"
+                    android:layout_width="0dp"
+                    android:layout_height="100sp"
+                    android:layout_weight="1"
+                    android:layout_marginStart="20sp"
+                    android:layout_marginEnd="5sp"
+                    android:backgroundTint="@color/btGrey"
+                    android:drawableLeft="@drawable/ic_transfer"
+                    android:text="IBAN Transfer"
+                    android:textColor="@color/black"
+                    app:cornerRadius="20sp" />
 
-            <ImageButton
-                android:id="@+id/transferFrag_ibTransfer"
-                android:layout_width="85sp"
-                android:layout_height="85sp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="12dp"
-                android:background="@drawable/ic_transfer" />
-
-            <TextView
-                android:id="@+id/transferFrag_tvTransfer"
-                android:layout_width="110sp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/transferFrag_ibTransfer"
-                android:layout_centerHorizontal="true"
-                android:textAlignment="center"
-                android:text="IBAN Transfer"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
-
-
-        <RelativeLayout
-            android:id="@+id/transferFrag_rlMobile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5sp"
-            android:layout_marginEnd="60sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/transferFrag_rlRequest">
-
-            <ImageButton
-                android:id="@+id/transferFrag_ibMobile"
-                android:layout_width="85sp"
-                android:layout_height="85sp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_mobile_transfer" />
-
-            <TextView
-                android:id="@+id/transferFrag_tvMobile"
-                android:layout_width="110sp"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/transferFrag_ibMobile"
-                android:layout_centerHorizontal="true"
-                android:text="Mobile Transfer"
-                android:textAlignment="center"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/transferFrag_btMobile"
+                    android:layout_width="0dp"
+                    android:layout_height="100sp"
+                    android:layout_weight="1"
+                    android:layout_marginStart="5sp"
+                    android:layout_marginEnd="20sp"
+                    android:backgroundTint="@color/btGrey"
+                    android:drawableLeft="@drawable/ic_mobile_transfer"
+                    android:text="Mobile Transfer"
+                    android:textColor="@color/black"
+                    app:cornerRadius="20sp"
+                    android:drawablePadding="8dp" />
+            </LinearLayout>
+        </LinearLayout>
 
         <ListView
             android:id="@+id/transferFrag_lvTransfers"
@@ -173,12 +133,12 @@
             android:layout_marginStart="15sp"
             android:layout_marginEnd="15sp"
             android:layout_marginBottom="50sp"
+            app:layout_constraintTop_toBottomOf="@id/transferFrag_llButtons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/transferFrag_rlTransfer"
             android:overScrollMode="never"
             android:divider="@color/white"
-            android:dividerHeight="7sp"
+            android:dividerHeight="9sp"
             android:scrollbars="none"
             android:listSelector="@android:color/transparent">
         </ListView>
